--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <!-- activity_user-->
+    <!-- fragment_user-->
     <string name="feedbacktype1">Praise</string>
     <string name="feedbacktype2">Gripe</string>
     <string name="feedbacktype3">Suggestion</string>
